--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,13 @@
     text-align: center;
 }
 
+.item {
+    padding: 16px;
+    border-radius: 16px;
+    border: 1px solid black;
+    margin-bottom: 8px;
+}
+
 .form {
     display: flex;
     flex-direction: column;
@@ -101,3 +108,4 @@ input:focus {
     color: white;
     font-weight: bold;
 }
+
